--- a/tutorial/src/measures.Rmd
+++ b/tutorial/src/measures.Rmd
@@ -13,8 +13,8 @@ the [WrappedModel](&makeWrappedModel) and/or the [&Task].
 
 **Aggr** shows the default aggregation method.
 
-In case of *classification* column **MultiClass** indicates if a measure is suitable for 
-multi-class problems. If not the measure can only be used for binary classification problems.
+For *classification*, column **MultiClass** indicates if a measure is suitable for 
+multi-class problems. If not, the measure can only be used for binary classification problems.
 
 
 ```{r include=FALSE}
