--- a/tutorial/src/performance.Rmd
+++ b/tutorial/src/performance.Rmd
@@ -1,18 +1,18 @@
 # Evaluating Learner Performance
 
-The quality of the predictions of a model in **mlr** can be assessed w.r.t. a
+The quality of the predictions of a model in **mlr** can be assessed with respect to a
 number of different performance measures.
 In order to calculate the performance measures, call [&performance] on the object
 returned by [predict](&predict.WrappedModel) and specify the desired performance measure(s).
 
 
-## Implemented performance measures
+## Available performance measures
 
 **mlr** provides a large number of performance measures for all types of learning problems.
-Typical performance measures for *classification* are mean misclassification error ([&mmce]),
-accuracy ([&acc]) or measures based on [ROC analysis](&roc_analysis.md).
-For *regression* usually mean of squared errors ([&mse]) or mean of absolute errors ([&mae])
-are considered.
+Typical performance measures for *classification* are the mean misclassification error ([&mmce]),
+accuracy ([&acc]) or measures based on [ROC analysis](roc_analysis.md).
+For *regression* the mean of squared errors ([&mse]) or mean of absolute errors ([&mae])
+are usually considered.
 For *clustering* tasks, measures such as the Dunn index ([&dunn]) are provided,
 while for *survival* predictions, the Concordance Index ([&cindex]) is
 supported, and for *cost-sensitive* predictions the misclassification penalty
@@ -24,8 +24,8 @@ To see which performance measures are implemented, have a look at the
 [table of performance measures](measures.md) and the [&measures] documentation page.
 
 If you want to implement an additional measure or include a measure with
-non-standard misclassification costs, go to section
-[Create Custom Measures](&create_measure.md).
+non-standard misclassification costs, see the section on
+[creating custom measures](create_measure.md).
 
 
 ## Calculate performance measures
@@ -43,10 +43,10 @@ pred = predict(mod, task = bh.task, subset = seq(2,n,2))
 performance(pred)
 ```
 
-For each type of learning problem there is a default performance measure.
-For regression the mean squared error ([&mse]) is calculated.
+For each type of learning problem, there is a default performance measure.
+For regression, the mean squared error ([&mse]) is calculated.
 
-Compute the median of squared errors ([&medse]) instead.
+The following code computes the median of squared errors ([&medse]) instead.
 
 ```{r}
 performance(pred, measures = medse)
@@ -68,7 +68,7 @@ works in the same way.
 ### Requirements of performance measures
 
 Note that in order to calculate some performance measures it is required that you pass the 
-[&Task] or the [fitted model](&makeWrappedModel) additionally to the [&Prediction].
+[&Task] or the [fitted model](&makeWrappedModel) in addition to the [&Prediction].
 
 For example in order to assess the time needed for training ([&timetrain]), the fitted
 model has to be passed.
@@ -87,10 +87,10 @@ performance(pred, measures = dunn, task = mtcars.task)
 ```
 
 Moreover, some measures require a certain type of prediction.
-For example in binary classification in order to calculate the AUC ([&auc]) - the area
-under the ROC (receiver operating characteristic) curve, we have to make sure that posterior
+For example in binary classification in order to calculate the AUC ([&auc]) -- the area
+under the ROC (receiver operating characteristic) curve -- we have to make sure that posterior
 probabilities are predicted.
-For more information on ROC analysis, see section [ROC Analysis](roc_analysis.md).
+For more information on ROC analysis, see the section on [ROC analysis](roc_analysis.md).
 
 ```{r}
 lrn = makeLearner("classif.rpart", predict.type = "prob")
@@ -100,8 +100,8 @@ pred = predict(mod, task = sonar.task)
 performance(pred, measures = auc)
 ```
 
-Also bear in mind that many of the performance measures available for classification as,
-e.g., the false positive rate ([&fpr]) are only suitable for binary problems.
+Also bear in mind that many of the performance measures that are available for classification,
+e.g., the false positive rate ([&fpr]), are only suitable for binary problems.
 
 
 ## Access a performance measure
@@ -119,7 +119,7 @@ str(mmce)
 ## Find a suitable performance measure
 
 The properties and requirements of the individual measures are shown in the
-[table of performance measures](&measures.md).
+[table of performance measures](measures.md).
 
 If you would like a list of available measures with certain properties or suitable for a
 certain learning [&Task] use the function [&listMeasures].
@@ -134,9 +134,9 @@ listMeasures(iris.task)
 
 ## Binary classification: Plot performance(s) versus threshold
 
-As you may recall (see the previous section about [making predictions](&predict.md))
+As you may recall (see the previous section on [making predictions](predict.md))
 in binary classification we can adjust the threshold used to map probabilities to class labels.
-Helpful in this regard is function [&plotThreshVsPerf] that generates a plot of the
+Helpful in this regard is the function [&plotThreshVsPerf], which generates a plot of the
 learner performance versus the threshold.
 Later on we will show how to find an optimal threshold value by [tuning](tune.md).
 
