--- a/tutorial/src/create_learner.Rmd
+++ b/tutorial/src/create_learner.Rmd
@@ -23,7 +23,7 @@ Second, use [makeDiscreteLearnerParam](&ParamHelpers::LearnerParam) and
 of the parameters.
 Include all possible values for discrete parameters and lower and upper bounds for numeric parameters.
 
-Add information for the properties (see also the section about [Learners](learner.md)).
+Add information for the properties (see also the section on [learners](learner.md)).
 Which types of predictors that are supported (numerics, factors)?
 Are case weights supported? Can the method deal with missing values in the features and deal 
 with NAs in a meaningful way (not ``na.omit``)?
@@ -78,18 +78,18 @@ trainLearner.classif.lda = function(.learner, .task, .subset, .weights,  ...) {
 ## Creating the prediction method
 
 This must predict for the new observations in the `data.frame` ``.newdata`` with the wrapped model ``.model``.
-Simply access the real fitted model by ``.model$learner.model``.
+Simply access the real fitted model through ``.model$learner.model``.
 
-For regression you have to return a numeric vector of predicted response values.
+For regression, you have to return a numeric vector of predicted response values.
 
-For classification you have to return a factor of predicted classes if ``.learner$predict.type`` 
-is ``"response"``, or you have return a matrix of predicted probabilities if
+For classification, you have to return a factor of predicted classes if ``.learner$predict.type`` 
+is ``"response"``, or a matrix of predicted probabilities if
 ``.learner$predict.type`` is ``"prob"``.
 In the latter case the matrix must have the same number of columns as there are classes in 
 the task and the columns have to be named by the class names.
 
-For clustering, you have to return a numeric vector with the IDs of the clusters that the 
-respective datum has been assigned to.
+For clustering, you have to return a numeric vector with the IDs of the clusters
+that the respective datum has been assigned to. The numbering should start at 1.
 
 ```{r}
 predictLearner.classif.lda = function(.learner, .model, .newdata, ...) {
