--- a/tutorial/src/index.Rmd
+++ b/tutorial/src/index.Rmd
@@ -12,13 +12,13 @@ They are regularly updated and reflect the documentation of the current package 
 
 The tutorial explains the basic analysis of a data set step by step:
 
-* What is your data and the aim of your analysis?
-* How do you select learning algorithms and set them up?
-* How to predict given new data?
-* How to evaluate models and their predictions?
-* How to tune models?
-* How to select important features?
-* How to conduct a comparison study?
+* What is your data and the aim of your analysis? [Tasks](task.md)
+* How do you select learning algorithms and set them up? [Learners](learner.md), [Train](train.md)
+* How to predict given new data? [Predict](predict.md)
+* How to evaluate models and their predictions? [Performance](performance.md), [Resampling](resample.md)
+* How to tune models? [Tuning](tune.md)
+* How to select important features? [Feature Selection](feature_selection.md)
+* How to conduct a comparison study? [Benchmark Experiments](benchmark_experiments.md)
 
 We present various simple examples from classification and regression
 during this tutorial to illustrate the main features of the
