--- a/tutorial/src/predict.Rmd
+++ b/tutorial/src/predict.Rmd
@@ -13,7 +13,7 @@ There are two ways to pass the data:
 The first way is preferable if you want predictions for data already included in the [&Task].
 
 Just as [&train], the [predict](&predict.WrappedModel) function has a ``subset`` argument,
-so you can set aside different portions of the data in [&Task] for training and prediction.
+so you can set aside different portions of the data in [&Task] for training and prediction (more advanced methods for splitting the data in train and test set are described in the [section on resampling](resample.md)).
 
 In the following example we fit a [gradient boosting machine](&gbm::gbm) to every second
 observation of the [BostonHousing](&mlbench::BostonHousing) data set and make predictions
@@ -32,7 +32,7 @@ task.pred
 
 The second way is useful if you want to predict data not included in the [&Task].
 
-In the following we cluster the ``iris`` data set without the target variable.
+Here we cluster the ``iris`` data set without the target variable.
 All observations with an odd index are included in the [&Task] and used for training.
 Predictions are made for the remaining observations.
 
@@ -54,7 +54,7 @@ The result of [predict](&predict.WrappedModel) depends on the nature of the [&Ta
 and the type of prediction chosen when creating the [Learner](&makeLearner).
 For example in case of survival analysis the default is to predict the response.
 For the [Cox proportional hazards model](&Surv::coxph) we get the values of the linear
-predictor as shown in the following.
+predictor as shown below.
 
 ```{r}
 n = lung.task$task.desc$size
@@ -82,7 +82,7 @@ Predictions are encapsulated in a special [&Prediction] object.
 
 ## Accessing the prediction
 
-A [&Prediction] object is a ``list``. The most important element is ``"data"`` which is a
+A [&Prediction] object is a ``list``. The most important element is ``data`` which is a
 ``data.frame`` that contains columns with the true values of the target variable (in case of
 supervised learning problems) and the predictions.
 
@@ -107,7 +107,7 @@ the prediction corresponds to.
 
 ### Extract Probabilities
 
-The predicted probabilities can be extracted from the [&Prediction] using function
+The predicted probabilities can be extracted from the [&Prediction] using the function
 [&getProbabilities].
 Here is another cluster analysis example. We use [fuzzy c-means clustering](&e1071::cmeans)
 on the [mtcars](&datasets::mtcars) data set.
@@ -120,11 +120,11 @@ pred = predict(mod, task = mtcars.task)
 head(getProbabilities(pred))
 ```
 
-In case of classification problems there are some more things worth mentioning.
+For classification problems there are some more things worth mentioning.
 
 ### Classification
 
-Per default, class labels are predicted.
+By default, class labels are predicted.
 
 ```{r}
 ## Linear discriminant analysis on the iris data set
@@ -164,9 +164,9 @@ head(getProbabilities(pred))
 We can set the threshold value that is used to map the predicted posterior probabilities to class labels.
 Note that for this purpose we need to create a [Learner](&makeLearner) that predicts
 probabilities.
-For binary classification you set the threshold for the *positive* class.
+For binary classification, the threshold determines when the *positive* class is predicted.
 The default is 0.5.
-Now, we set the threshold for the *positive* class to 0.8 (that is, an example is assigned to the positive class if its posterior probability exceeds 0.8).
+Now, we set the threshold for the positive class to 0.8 (that is, an example is assigned to the positive class if its posterior probability exceeds 0.8).
 Which of the two classes is the positive one can be seen by accessing the [&Task].
 To illustrate binary classification, we use the [BreastCancer](&mlbench::BreastCancer)
 data set from the
@@ -191,7 +191,7 @@ of the positive class only.
 head(getProbabilities(pred))
 ```
 
-It works similar for multiclass classification.
+It works similarly for multiclass classification.
 The threshold has to be given by a named vector specifying the values by which each probability will be divided. 
 The class with the maximum resulting value is then selected.
 
@@ -208,13 +208,13 @@ table(as.data.frame(pred)$response)
 
 ## Visualizing the prediction
 
-Function [&plotLearnerPrediction] allows to visualize predictions, e.g., for teaching purposes
+The function [&plotLearnerPrediction] allows to visualize predictions, e.g., for teaching purposes
 or exploring models.
 It trains the chosen learning method for 1 or 2 selected features and then displays the
-predictions via [ggplot](&ggplot2::ggplot). 
+predictions with [ggplot](&ggplot2::ggplot). 
 
-For *classification*, we get a scatter plot of 2 features (per default the first 2 in the data set).
-The plotting symbols show the true class labels of the data points.
+For *classification*, we get a scatter plot of 2 features (by default the first 2 in the data set).
+The type of symbol shows the true class labels of the data points.
 The color indicates if observations are misclassified.
 The posterior probabilities (if the learner under consideration supports this)
 are represented by the background color.
@@ -222,15 +222,15 @@ are represented by the background color.
 The plot title displays the ID of the [Learner](&makeLearner) (in the following example CART),
 its parameters, its training performance and its cross-validation performance.
 [&mmce] stands for *mean misclassification error*, i.e., the error rate.
-See the sections [Performance](&performance.md) and
-[Resampling](&resample.md) for further explanations.
+See the sections on [performance](performance.md) and
+[resampling](resample.md) for further explanations.
 
 ```{r}
 lrn = makeLearner("classif.rpart", id = "CART")
 plotLearnerPrediction(lrn, task = iris.task)
 ```
 
-For *regression*, there exist two types of plots.
+For *regression*, there are two types of plots.
 The 1D plot shows the target values in dependence of 1 feature, the regression curve and
 if the chosen learner supports this the estimated standard error.
 
