--- a/tutorial/src/train.Rmd
+++ b/tutorial/src/train.Rmd
@@ -18,7 +18,7 @@ mod = train(lrn, task)
 mod
 ```
 
-In the above example, generating a [Learner](&makeLearner) is not strictly necessary.
+In the above example, creating a [Learner](&makeLearner) explicitly is not strictly necessary.
 Generally, you have to create a [Learner](&makeLearner) if you want to change any defaults
 by, e.g., setting hyperparameter values or changing the type of prediction.
 Otherwise, [&train] and many other functions accept a character string naming the learning
@@ -29,9 +29,9 @@ mod = train("surv.coxph", task)
 mod
 ```
 
-Training a learning method works the same for every type of [&Task].
+Training a learner works the same way for every type of [&Task].
 Here is a cluster analysis example using the data set [mtcars](&dataset::mtcars).
-Since we want to set a hyperparameter value we have to create a [Learner](&makeLearner).
+We create a [Learner](&makeLearner) because we want to set one of the hyperparameter values, the number of clusters.
 
 ```{r}
 task = makeClusterTask(data = mtcars)
@@ -65,7 +65,7 @@ For example, in the [BreastCancer](&mlbench::BreastCancer) data set class benign
 twice as frequent as class malignant.
 If both classes should have equal importance in training the classifier we can weigh the
 examples according to the class frequencies in the data set as shown in the following
-**R** code (see also the section about [imbalanced classification problems](&over_and_undersampling.md)).
+**R** code (see also the section about [imbalanced classification problems](over_and_undersampling.md)).
 
 ```{r}
 ## Calculate the observation weights
@@ -87,7 +87,7 @@ The weights in [&train] overwrite the weights in [&Task].
 ## Wrapped models
 
 [&train] returns an object of class [&WrappedModel], which wraps the
-particular model (i.e., contains the output) of the underlying **R** learning method.
+particular model of the underlying **R** learning method. The wrapped model contains the output as well as the actual model.
 It can subsequently be used to perform a [prediction](&predict.WrappedModel) for new observations.
 
 
